Adding Talent modification. Starting Character-Talent tables.

--- a/views/charakter-db.jade
+++ b/views/charakter-db.jade
@@ -118,3 +118,17 @@ html(lang="de")
 								strong Nachteile
 							each val in Nachteile
 								li= val
+		section
+			table.data-section.mitte.eigenschaften
+				caption Abenteuerpunkte
+				colgroup
+					col(style="width: 15%")
+					col(style="width: 35%")
+					col(style="width: 15%")
+					col(style="width: 35%")
+				tbody
+					tr
+						th gesamt
+						td 1500
+						th frei
+						td 1000
