--- a/public/show.css
+++ b/public/show.css
@@ -29,10 +29,6 @@
 .talente tbody td:first-child {
 	text-align: left;
 }
-.nobg {
-	background-color: white;
-	padding-right: 3em;
-}
 /*
 .talente td:nth-child(4n-3) {
 	text-align: left;
@@ -58,6 +54,7 @@
 }
 body {
 	padding: 0;
+	padding-bottom: 3em;
 	margin: 0;
 	font-family: sans-serif;
 }
