--- a/views/edit-ap.jade
+++ b/views/edit-ap.jade
@@ -5,12 +5,12 @@ html(lang="de")
 		link(rel="stylesheet", type="text/css", href="/show.css")
 	body
 		// nav
-		form(action="/ap/char/"+_id, method="post", accept-charset="utf-8")
-			input(type="hidden", name="_method", value="put")
-			fieldset
-				legend AP
+		section
+			h1.mitte Abenteuerpunkte vergeben
+			form(action="/cdata/"+_id, method="post", accept-charset="utf-8")
+				input(type="hidden", name="_method", value="put")
 				table.data-section.mitte.eigenschaften
-					caption Abenteuerpunkte
+					caption= Person.Name
 					colgroup
 						col(style="width: 15%")
 						col(style="width: 35%")
@@ -21,8 +21,8 @@ html(lang="de")
 							th 
 								label(for="alle") gesamt:
 							td 
-								input#alle(type="number", name="alle", min="0", value=AP.alle)
+								input#alle.mitte(type="number", name="AP[alle]", min="0", value=AP.alle)
 							th 
 								label(for="frei") frei:
 							td 
-								input#frei(type="number", name="frei", min="0", value=AP.frei)
+								input#frei.mitte(type="number", name="AP[frei]", min="0", value=AP.frei)
