--- a/views/held.jade
+++ b/views/held.jade
@@ -9,7 +9,7 @@ html(lang="de")
 		nav
 			ul#main-menu
 				li
-					a.mitte(href="/chars") [ Charakterliste ]
+					a.mitte(href="/helden") [ Charakterliste ]
 				li
 					a.mitte(href="/neu") [ Neuer Charakter ]
 				li 
@@ -18,15 +18,13 @@ html(lang="de")
 						li
 							a(href="/ap/") AP hinzufügen
 						li
-							a(href="/edit/") Eigenschaften
+							a(href="/char/"+_charID) Eigenschaften
 						li
 							a(href="/talent/") Talente
 						li
 							a(href="/sf/") Sonderfertigkeiten
 						li
 							a(href="/zauber/") Zauber
-						li
-							a(href="/liturgie/") Liturgien
 				li
 					a.mitte(title="springe zu Abschnitt ...") &#8681;
 					ul
@@ -43,7 +41,7 @@ html(lang="de")
 						li
 							a(href="#ap") AP
 
-		section
+		section(style="clear: both;")
 			h1.mitte= held.Person.Name
 			
 			a#bes
@@ -155,7 +153,7 @@ html(lang="de")
 								li= val
 						ul.vor-nach.fl-rechts
 							li.mitte
-								strong held.Nachteile
+								strong Nachteile
 							each val in held.Nachteile
 								li= val
 		a#ap
