--- a/views/held.jade
+++ b/views/held.jade
@@ -16,15 +16,15 @@ html(lang="de")
 					a.mitte #{held.Person.Name.split(' ')[0]} bearbeiten
 					ul
 						li
-							a(href="/ap/") AP hinzufügen
+							a(href="/ap/"+_id) AP hinzufügen
 						li
 							a(href="/char/"+_charID) Eigenschaften
 						li
-							a(href="/talent/") Talente
+							a Talente
 						li
-							a(href="/sf/") Sonderfertigkeiten
+							a Sonderfertigkeiten
 						li
-							a(href="/zauber/") Zauber
+							a Zauber
 				li
 					a.mitte(title="springe zu Abschnitt ...") &#8681;
 					ul
