--- a/views/held.jade
+++ b/views/held.jade
@@ -22,7 +22,7 @@ html(lang="de")
 						li
 							a Talente
 						li
-							a Sonderfertigkeiten
+							a(href="/sf/"+_id) Sonderfertigkeiten
 						li
 							a Zauber
 				li
