working on SF editing (jade). encountered 'uncaught exception @ app.listen()' on start.

--- a/views/held.jade
+++ b/views/held.jade
@@ -16,15 +16,19 @@ html(lang="de")
 					a.mitte #{held.Person.Name.split(' ')[0]} bearbeiten
 					ul
 						li
-							a(href="/ap/"+_id) AP hinzufügen
-						li
-							a(href="/char/"+_charID) Eigenschaften
+							a(href="/ap/"+_id) Abenteuerpunkte
 						li
 							a Talente
+						li
+							a(href="/char/"+_charID) Eigenschaften
 						li
 							a(href="/sf/"+_id) Sonderfertigkeiten
 						li
 							a Zauber
+						li
+							a Rituale
+						li
+							a Liturgien
 				li
 					a.mitte(title="springe zu Abschnitt ...") &#8681;
 					ul
