--- a/views/new_char.jade
+++ b/views/new_char.jade
@@ -454,8 +454,10 @@ html(lang="de")
 							optgroup(label="nicht-alveranische Gottheiten")
 								option Aves
 								option Ifirn
-								option Kor
+								option Nandus
 								option Swafnir
+								// option Kamaluq
+								// option Himmelswölfe
 							optgroup(label="echsiche Gottheiten")
 								option H’Szint
 								option Zsahh
