--- a/views/edit-sf.jade
+++ b/views/edit-sf.jade
@@ -15,11 +15,174 @@ html(lang="de")
 					tr
 						td
 							ul
+								each val, key in _data.allgemein
+									li
+										input(type="checkbox", name="AP[allgemein]", id="sf1_"+key, value=val)
+										label(for="sf1_"+key)= val
 								li
-									input#all_1(type="checkbox", name="SF[allgemein]", value="")
-									label(for="all_1") Kulturkunde
-						td
+									input.spezifisch(type="checkbox", name="AP[allgemein]", value="Berufsgeheimnis")
+									label Berufsgeheimnis
+									input(type="text")
+									button.add(type="button") +
+								li
+									input.spezifisch(type="checkbox", name="AP[allgemein]", value="Ortskenntnis")
+									label Ortskenntnis
+									input(type="text")
+									button.add(type="button") +
+						td Kulturkunde:
+							ul
+								each val, key in _data.Kulturkunde
+									li
+										input(type="checkbox", name="AP[allgemein]", id="sf2_"+key, value="Kulturkunde (#{val})")
+										label(for="sf2_"+key) Kulturkunde (#{val})
 				
-				// put SF into JS
+				table.data-section
+					caption Kampf-Sonderfertigkeiten
+					tr
+						td
+							ul
+								- for (var x=0, l=Math.ceil(_data.Kampf.length/2); x<l; x++)
+									li
+										input(type="checkbox", name="AP[Kampf]", id="sf3_"+x, value=_data.Kampf[x])
+										label(for="sf3_"+x)= _data.Kampf[x]
+						td
+							ul
+								- for (var y=x+1, l=_data.Kampf.length; y<l; y++)
+									li
+										input(type="checkbox", name="AP[Kampf]", id="sf4_"+y, value=_data.Kampf[y])
+										label(for="sf4_"+y)= _data.Kampf[y]
+								li
+									input.spezifisch(type="checkbox", name="AP[Kampf]", value="Waffenmeister")
+									label Waffenmeister
+									input(type="text")
+									button.add(type="button") +
+
+				table.data-section
+					caption Waffenlose Manöver
+					tr
+						td
+							ul
+								- for (var x=0, l=Math.ceil(_data.Manöver.length/2); x<l; x++)
+									li
+										input(type="checkbox", name="AP[Manöver]", id="sf7_"+x, value=_data.Manöver[x])
+										label(for="sf7_"+x)= _data.Manöver[x]
+						td
+							ul
+								- for (var y=x+1, l=_data.Manöver.length; y<l; y++)
+									li
+										input(type="checkbox", name="AP[Manöver]", id="sf8_"+y, value=_data.Manöver[y])
+										label(for="sf8_"+y)= _data.Manöver[y]
+
+				table.data-section
+					caption Karmale Sonderfertigkeiten
+					tr
+						td
+							ul
+								each val, key in _data.geweiht
+									li
+										input(type="checkbox", name="AP[geweiht]", id="sf9_"+key, value=val)
+										label(for="sf9_"+key)= val
+								li
+									input.auswahl_liste(type="checkbox", name="AP[geweiht]", id="sf9_a", value="Spätweihe")
+									label(for="sf9_a") Spätweihe
+									select(size="1")
+										optgroup(label="alveranische Gottheiten")
+											option Boron
+											option Efferd
+											option Firun
+											option Hesinde
+											option Ingrimm
+											option Peraine
+											option Phex
+											option Praios
+											option Rahja
+											option Rondra
+											option Travia
+											option Tsa
+										optgroup(label="nicht-alveranische Gottheiten")
+											option Aves
+											option Ifirn
+											option Kor
+											option Nandus
+											option Swafnir
+										optgroup(label="echsiche Gottheiten")
+											option H’Szint
+											option Zsahh
+										optgroup(label="orkische Gottheiten")
+											option Gravesh
+										optgroup(label="zwergische Gottheiten")
+											option Angrosch
+				
+				table.data-section
+					caption Magische Sonderfertigkeiten
+					tr
+						td
+							ul
+								- for (var x=0, l=Math.ceil(_data.magisch.length/2); x<l; x++)
+									li
+										input(type="checkbox", name="AP[magisch]", id="sf10_"+x, value=_data.magisch[x])
+										label(for="sf10_"+x)= _data.magisch[x]
+						td
+							ul
+								- for (var y=x+1, l=_data.magisch.length; y<l; y++)
+									li
+										input(type="checkbox", name="AP[magisch]", id="sf11_"+y, value=_data.magisch[y])
+										label(for="sf11_"+y)= _data.magisch[y]
+														select(size="5", multiple).fl_rechts
+								li
+									input.auswahl_liste(type="checkbox", name="AP[magisch]", id="sf11_a", value="Spätweihe")
+									label(for="sf11_a") Merkmalskenntnis
+									select(size="5", multiple)
+										option Antimagie
+										option Beschwörung
+										optgroup(label="Dämonisch")
+											option(value="Dämonisch/gesamt") - gesamt
+											option(value="Dämonisch/Blakharaz") - Blakharaz
+											option(value="Dämonisch/Belhalhar") - Belhalhar
+											option(value="Dämonisch/Charyptoroth") - Charyptoroth
+											option(value="Dämonisch/Lolgramoth") - Lolgramoth
+											option(value="Dämonisch/Thargunitoth") - Thargunitoth
+											option(value="Dämonisch/Amazeroth") - Amazeroth
+											option(value="Dämonisch/Belshirash") - Belshirash
+											option(value="Dämonisch/Asfaloth") - Asfaloth
+											option(value="Dämonisch/Tasfarelel") - Tasfarelel
+											option(value="Dämonisch/Belzhorash") - Belzhorash
+											option(value="Dämonisch/Agrimoth") - Agrimoth
+											option(value="Dämonisch/Belkelel") - Belkelel
+										optgroup(label="Elementar")
+											option(value="Elementar/gesamt") - gesamt
+											option(value="Elementar/Eis") - Eis
+											option(value="Elementar/Erz") - Erz
+											option(value="Elementar/Feuer") - Feuer
+											option(value="Elementar/Humus") - Humus
+											option(value="Elementar/Luft") - Luft
+											option(value="Elementar/Wasser") - Wasser
+										option Eigenschaften
+										option Einfluß
+										option Form
+										option Geisterwesen
+										option Heilung
+										option Hellsicht
+										option Herbeirufung
+										option Herrschaft
+										option Illusion
+										option Kraft
+										option Limbus
+										option Metamagie
+										option Objekt
+										option Schaden
+										option Telekinese
+										option Temporal
+										option Umwelt
+										option Verständigung
+
 				.mitte
 					button(type="submit", disabled) speichern
+		script(type="text/javascript", src="/preprocess.vorteile.js")
+		script.
+			(function() {
+				$('.add').on("click", function() {
+					var $li = $(this).closest('li').clone().insertAfter(this);
+					$(this).remove();
+				});
+			})();
