Getting the Talent editing layout to show.

--- a/views/held.jade
+++ b/views/held.jade
@@ -18,7 +18,7 @@ html(lang="de")
 						li
 							a(href="/ap/"+_id) Abenteuerpunkte
 						li
-							a Talente
+							a(href="/taw/"+_id) Talente
 						li
 							a(href="/char/"+_charID) Eigenschaften
 						li
